; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_nexus.c_nexus_unmap_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_nexus.c_nexus_unmap_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }
%struct.resource_map = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, %struct.resource*, %struct.resource_map*)* @nexus_unmap_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nexus_unmap_resource(i32 %0, i32 %1, i32 %2, %struct.resource* %3, %struct.resource_map* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.resource*, align 8
  %11 = alloca %struct.resource_map*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store %struct.resource* %3, %struct.resource** %10, align 8
  store %struct.resource_map* %4, %struct.resource_map** %11, align 8
  %12 = load i32, i32* %9, align 4
  switch i32 %12, label %22 [
    i32 128, label %13
    i32 129, label %21
  ]

13:                                               ; preds = %5
  %14 = load %struct.resource_map*, %struct.resource_map** %11, align 8
  %15 = getelementptr inbounds %struct.resource_map, %struct.resource_map* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.resource_map*, %struct.resource_map** %11, align 8
  %18 = getelementptr inbounds %struct.resource_map, %struct.resource_map* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @pmap_unmapdev(i32 %16, i32 %19)
  br label %21

21:                                               ; preds = %5, %13
  br label %24

22:                                               ; preds = %5
  %23 = load i32, i32* @EINVAL, align 4
  store i32 %23, i32* %6, align 4
  br label %25

24:                                               ; preds = %21
  store i32 0, i32* %6, align 4
  br label %25

25:                                               ; preds = %24, %22
  %26 = load i32, i32* %6, align 4
  ret i32 %26
}

declare dso_local i32 @pmap_unmapdev(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
